# telegram-analytic-dashboard

./: .env.example  .gitignore  LICENSE  README.md  config.ini.example  docker-compose.yaml  pyproject.toml
data/: .gitignore
data/accounts/: accounts.json.example
data/channels/: channels.json.example
docker/: .gitignore
docker/python/: Dockerfile  setup.sh
src/: Procfile  __init__.py  main.py
src/config/: .env.example  settings.py
src/database/: __init__.py  base_database_handler.py  database_handler.py  db_connector.py  debug_database_handler.py  models.py
src/database/handlers/: __init__.py  database_handler.py  debug_database_handler.py
src/loaders/accounts/: __init__.py  base_accounts_loader.py  json_accounts_loader.py
src/loaders/channels/: __init__.py  base_channels_loader.py  json_channels_loader.py  list_channels_loader.py
src/loaders/loaders_models/: __init__.py  channel_model.py  message_model.py
src/managers/: channels_manager.py  messages_manager.py  sender_manager.py
src/models/: __init__.py  accounts_model.py
src/scraper/: __init__.py  auth_scraper.py  base_scraper.py  scraper.py
src/scraper/managers/: __init__.py  channels_manager.py  messages_manager.py
src/scraper/utils/: __init__.py  session_path.py
src/services/: __init__.py  db_data_to_pandas_loader.py
src/utils/: __init__.py  config.py  session_path.py  settings.py  text_processing.py
src/web_app/: analytics_notebook.ipynb  app.py
src/web_app/assets/: spc-custom-styles.css
src/web_app/components/: __init__.py  base_component.py  channel_tab_dashboard_manager.py  charts_components.py  message_engagement_charts_component.py
src/web_app/components/channel_tab_components/: __init__.py  base_dashboard_component.py  channel_tab_dashboard_manager.py  message_engagement_charts_component.py  messages_emojis_charts_component.py  messages_wordcloud_charts_component.py  stats_panel_component.py
src/web_app/components/page_components/: __init__.py  banner_component.py  (+6 more)
src/workers/: __init__.py  base_worker.py  channels_scraper.py
(+2 files in other folders)
