[tool.poetry]
name = "telegram_commenting_automation"
version = "1.0.0"
description = "Automation for сcommenting on post in channels what you need"
authors = ["CESSIDY <vrupa1713@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyaes = "1.6.1"
pyasn1 = "0.4.8"
rsa = "4.8"
Telethon = "1.34.0"
pymongo = "^4.6.2"
mongoengine = "^0.27.0"
python-dotenv = "^1.0.1"
dash = "^2.16.0"
gunicorn = "^21.2.0"
dash-daq = "^0.5.0"
pandas = "^2.2.1"
dash-mantine-components = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
